--- a/Media/css/Styles.css
+++ b/Media/css/Styles.css
@@ -24,7 +24,7 @@ body {
   align-items: center;  
   flex-direction: column; 
   margin-top: 110px;
-  background-image: url(/images/Picture.jpg);
+  background-image: url(/Medira/Media/images/Picture.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
