--- a/Media/css/signup.css
+++ b/Media/css/signup.css
@@ -10,7 +10,7 @@ body{
     height: 100vh;
     /* justify-content: center; */
     align-items: center;
-    background-image: url(/images/Picture.jpg);
+    background-image: url(../Medira/Media/images/Picture.jpg);
     background-size: cover;
     
 }
@@ -22,7 +22,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('/images/Picture.jpg');
+    background-image: url('/Medira/Media/images/Picture.jpg');
     background-size: cover;
     background-position: center;
     filter: blur(10px); /* Adjust the blur as needed */
