--- a/Views/Admin.ejs
+++ b/Views/Admin.ejs
@@ -74,7 +74,7 @@
             <tr>
                 <td>JaneSmith</td>
                 <td>jane@example.com</td>
-                <td>Healthcare Provider</td>
+                <td>Admin</td>
                 <td class="actions">
                     <button onclick="editUser()">Edit</button>
                     <button class="delete" onclick="deleteUser()">Delete</button>
@@ -97,6 +97,7 @@
             <select id="role" name="role">
                 <option value="healthcare_provider">Healthcare Provider</option>
                 <option value="patient">Patient</option>
+                <option value="patient">Admin</option>
             </select><br><br>
 
             <button type="submit">Add User</button>
