--- a/Media/css/signup.css
+++ b/Media/css/signup.css
@@ -133,15 +133,19 @@ body::before {
 }
 
 .form-submit-btn input{
-    display: block;
     width: 100%;
-    margin-top: 10px;
-    font-size: 20px;
-    padding: 10px;
-    border:none;
-    border-radius: 3px;
-    color: rgb(209, 209, 209);
+    background: #fff;
+    border: none;
+    outline: none;
+    border-radius: 40px;
     background: rgba(0, 140, 255, 0.7);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    margin-top: 10px;
+    padding: 10px;
+    font-size: 20px;
+    color: #fcfafa;
+    font-weight: 600;
 }
 
 .form-submit-btn input:hover{
