--- a/Media/css/DiscussionForum.css
+++ b/Media/css/DiscussionForum.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
@@ -58,4 +58,7 @@ footer {
   position: relative;
   bottom: 0;
   width: 100%;
+} */
+.container{
+  padding-top: 60px;
 }
