Contact us and index and login and signup
Contact added animation and in the rest removed slider bar

--- a/Media/css/login.css
+++ b/Media/css/login.css
@@ -10,6 +10,7 @@ body {
     background-image: url(/Medira/Media/images/Picture.jpg);
     background-size: cover;
     background-position: center;
+    overflow-y: hidden;
 }
 
 body::before {
