--- a/Media/css/Styles.css
+++ b/Media/css/Styles.css
@@ -62,39 +62,49 @@ body {
     padding-right: 30px;
 }
 
-.started {
-  border: none;
-  padding: 18px 58px 18px 19px;
-  text-transform: capitalize;
-  border-radius: 6px;
+/* Start of Button */ 
+.button {
   cursor: pointer;
-  color: #fff;
-  display: inline-block;
-  font-size: 25px;
-  background-size: 200%;
-  transition: 0.6s;
-  box-shadow: 0px 7px 21px 0px rgba(0, 0, 0, 0.12);
-  background-image: linear-gradient(to left, #559af3, #1462f3, #559af3);
-}
-
-.started:hover {
-  background-image: linear-gradient(to right, #559af3, #1462f3, #559af3);
-  box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.18); /* Slightly bigger shadow on hover */
-}
-
-.started i {
-  color: #ffffff;
-  font-size: 20px;
-  font-weight: 500;
   position: relative;
-  left: 26px;
-  transition: .4s;
+  padding: 10px 24px;
+  font-size: 30px;
+  color: #396cf0;
+  border: 2px solid #396cf0;
+  border-radius: 34px;
+  background-color: transparent;
+  font-weight: 600;
+  transition: all 0.3s cubic-bezier(0.23, 1, 0.320, 1);
+  overflow: hidden;
 }
 
-.started:hover i {
-  left: 30px;  /* Move icon slightly on hover */
-  transform: translateX(5px); /* Slight icon shift */
+.button::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  margin: auto;
+  width: 70px;
+  height: 50px;
+  border-radius: inherit;
+  scale: 0;
+  z-index: -1;
+  background-color: #396cf0;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
 }
+
+.button:hover::before {
+  scale: 3;
+}
+
+.button:hover {
+  color: #212121;
+  scale: 1.1;
+  box-shadow: 0 0px 20px rgba(193, 163, 98,0.4);
+}
+
+.button:active {
+  scale: 1;
+}
+/* End of Button */
 
 
 .slider-area .hero__caption span {
